fix search ideas on mobile

--- a/client/src/components/pages/home/explore/search-ideas.css
+++ b/client/src/components/pages/home/explore/search-ideas.css
@@ -1,10 +1,12 @@
 .search-ideas {
     background: #212121;
+    overflow-x: auto;
 }
 
 .search-idea {
     background: #86bac7;
     transition: background-color 0.25s ease;
+    white-space: nowrap;
 }
 
 .search-idea:hover {
